exports[`configureStore the store should configure store with given initial state 1`] = `
Object {
  "auth": Object {
    "authToken": "initialToken",
  },
  "cards": Object {
    "data": Object {},
    "error": false,
    "loading": false,
  },
  "columnData": Object {
    "data": Object {},
    "error": false,
    "loading": false,
  },
  "columns": Object {
    "data": Object {},
    "error": false,
    "loading": false,
  },
  "projects": Object {
    "currentRepo": false,
    "data": Array [],
    "error": false,
    "loading": false,
  },
  "repos": Object {
    "currentRepo": false,
    "data": Array [],
    "error": false,
    "loading": false,
  },
}
`;

exports[`configureStore the store should configure store with proper inital state 1`] = `
Object {
  "auth": Object {
    "authtoken": false,
  },
  "cards": Object {
    "data": Object {},
    "error": false,
    "loading": false,
  },
  "columnData": Object {
    "data": Object {},
    "error": false,
    "loading": false,
  },
  "columns": Object {
    "data": Object {},
    "error": false,
    "loading": false,
  },
  "projects": Object {
    "currentRepo": false,
    "data": Array [],
    "error": false,
    "loading": false,
  },
  "repos": Object {
    "currentRepo": false,
    "data": Array [],
    "error": false,
    "loading": false,
  },
}
`;
